fixed horizontal overflow

--- a/css/pfolio_style.css
+++ b/css/pfolio_style.css
@@ -8,6 +8,8 @@ body
     background-repeat: no-repeat;
     z-index: 1;
     height:1500px; 
+    overflow-x: hidden;
+   
    /* height:10000px;*/
     
 }
